Architecture Cleanup
